--- a/.env
+++ b/.env
@@ -15,4 +15,4 @@ SECURITY_BLACKLIST_LOG_FILE_PATH=""
 SECURITY_RATE_LIMIT=""
 SECURITY_DELAY_AFTER=""
 # Google Analytics
-VITE_GOOGLE_ANALYTICS_ID=""
+VITE_GOOGLE_ANALYTICS_ID="G-YVCF3BMFP1"
